# RGRP_CUDA_DEMO

./: CMakeLists.txt  LICENSE  README.md  main.cpp  res.qrc
UI/: Main.qml  data.js  run.js  selection.js
mathSolvers/kernels/: basicFuns.cu  basicFuns.cuh  ghostCellPresets.cu  ghostCellPresets.cuh  vec.cu  vec.cuh
mathSolvers/wrappers/: controller.cpp  controller.h  kernelLauncher.cpp  kernelLauncher.h  solvers.cu  solvers.cuh
